support Fighter Viewpoint.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ How to play
 <li>X:          bomb / cancel</li>
 <li>Shift:      slow</li>
 <li>Space:      character change(for debug)</li>
+<li>Y:          viewpoint change</li>
 </ul>
 
 <p>
