--- a/webgl_test.html
+++ b/webgl_test.html
@@ -48,6 +48,7 @@ function Layer(canvas) {
   this.shader = this._initShader(this.gl);
   this.mvMatrix = mat4.create();
   this.pMatrix = mat4.create();
+  this.count = 0;
 };
 
 Layer.prototype._NAMES = ['webgl', 'experimental-webgl'];
@@ -66,6 +67,7 @@ Layer.prototype._SHADERS['shader-vs'].src = '\
 \
   varying vec2 vTextureCoordinates;\
   varying vec4 vColor;\
+\
   void main() {\
     gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);\
     vTextureCoordinates = aTextureCoordinates;\
@@ -80,9 +82,35 @@ Layer.prototype._SHADERS['shader-fs'].src = '\
   varying vec2 vTextureCoordinates;\
   uniform sampler2D uSampler;\
   varying vec4 vColor;\
+  uniform float uFighterX;\
+  uniform float uFighterY;\
+  uniform int uTime;\
+  uniform bool uLight;\
+\
+  vec2 getPosition(int unitAngle, int uTime, int i) {\
+    float ax = abs(mod(float(uTime*2), 240.0) - 120.0);\
+    float ay = abs(mod(float(uTime*3), 240.0) - 120.0);\
+    float rad = radians(float(unitAngle * i + uTime*8));\
+    float x = uFighterX + ax * cos(rad);\
+    float y = uFighterY + ay * sin(rad);\
+    return vec2(x, y);\
+  }\
+\
+  const int num = 8;\
+  const int unitAngle = 360 / num;\
   void main() {\
     vec4 textureColor = texture2D(uSampler, vTextureCoordinates);\
-    gl_FragColor = textureColor * vColor;\
+    if(uLight) {\
+      float color = 0.0;\
+      for(int i = 0; i < num; i++) {\
+        vec2 pos = getPosition(unitAngle, uTime, i);\
+        float dist = length(gl_FragCoord.xy - pos) * 1.5;\
+        color += 5.0 / dist;\
+      }\
+      gl_FragColor = textureColor * vColor * vec4(vec3(color), 1.0);\
+    } else {\
+      gl_FragColor = textureColor * vColor;\
+    }\
   }\
 ';
 
@@ -195,6 +223,11 @@ Layer.prototype._initShader = function(gl) {
   shader.uSamplerUniform =
     gl.getUniformLocation(shader, 'uSampler');
 
+  shader.uTime = gl.getUniformLocation(shader, 'uTime');
+  shader.uLight = gl.getUniformLocation(shader, 'uLight');
+  shader.uFighterX = gl.getUniformLocation(shader, 'uFighterX');
+  shader.uFighterY = gl.getUniformLocation(shader, 'uFighterY');
+
   return shader;
 }
 
@@ -202,7 +235,24 @@ Layer.prototype._initShader = function(gl) {
 Layer.prototype.setMatrixUniforms = function(gl) {
   gl.uniformMatrix4fv(this.shader.pMatrixUniform, false, this.pMatrix);
   gl.uniformMatrix4fv(this.shader.mvMatrixUniform, false, this.mvMatrix);
-}
+};
+
+
+Layer.prototype.setUniformTime = function() {
+  this.gl.uniform1i(this.shader.uTime, this.count);
+  this.count += 1;
+};
+
+
+Layer.prototype.setUniformFighterPosition = function(fighter) {
+  this.gl.uniform1f(this.shader.uFighterX, 240+fighter.x);
+  this.gl.uniform1f(this.shader.uFighterY, 240-fighter.y);
+};
+
+
+Layer.prototype.setUniformLight = function(flag) {
+  this.gl.uniform1i(this.shader.uLight, flag);
+};
 
 
 Layer.prototype.viewport = function() {
@@ -960,6 +1010,9 @@ function drawBackground(layer) {
 
 
 function draw() {
+  mainLayer.setUniformFighterPosition(fighter);
+  mainLayer.setUniformTime(mainLayer.gl);
+
   bgLayer.viewport();
   bgLayer.clear();
   drawBackground(bgLayer);
@@ -1169,6 +1222,11 @@ function updateBullets() {
 };
 
 
+function updateLight() {
+  mainLayer.setUniformLight(document.getElementById('lightBool').checked);
+};
+
+
 window.onkeydown = handleKeydown;
 window.onkeyup = handleKeyup;
 
@@ -1217,6 +1275,8 @@ large
 <option>1</option>
 <option>0</option>
 </select>
+light
+<input id="lightBool" onchange="updateLight()" type="checkbox">
 </div>
 
 <p>
