added link to source code.

--- a/index.html
+++ b/index.html
@@ -106,5 +106,9 @@ Thanks for all the images and musics.
 This game is made by <a href="http://twitter.com/superhoge">@suprehoge</a>
 </p>
 
+<p>
+<a href="https://github.com/takahirox/toho-like-js">Source code</a>
+</p>
+
 </body>
 </html>
