Replace ws: with wss:

--- a/webrtc_test.html
+++ b/webrtc_test.html
@@ -9,7 +9,7 @@
 <script type="text/javascript">
 
 //var wsURL = 'ws://localhost:5000';
-var wsURL = 'ws://boiling-anchorage-5279.herokuapp.com/';
+var wsURL = 'wss://boiling-anchorage-5279.herokuapp.com/';
 
 var mainLayer;
 var bgLayer;
