--- a/webrtc_trial.html
+++ b/webrtc_trial.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 var peer;
 //var wsURL = 'ws://localhost:5000';
-var wsURL = 'ws://boiling-anchorage-5279.herokuapp.com/';
+var wsURL = 'wss://boiling-anchorage-5279.herokuapp.com/';
 var callButton, startButton;
 
 function Tester(room) {
